# noise-c

./: .gitignore  README.md
include/noise/protocol/: cipherstate.h  handshakestate.h
src/: Makefile.am  noise-c.c
src/protocol/: cipherstate.c  handshakestate.c  internal.h  rand_os.c
tools/keytool/: keytool.c
